# eBrowser-3ds

./: .gitignore  CMakeLists.txt
Legacy/legacy_include/: fs.h  includes.h  json.h  net.h  postview.h
Legacy/legacy_source/: fs.c  json.c  main.c  net.c
include/: fs.h  includes.h  net.h
source/: main.cpp  test.cpp
